feat: alterações nos arquivos OrderController, OrderRepository e OrderService